# Pebble-Web

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml
.github/workflows/: ci.yml
crates/pebble-core/: Cargo.toml
crates/pebble-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/pebble-crypto/: Cargo.toml
crates/pebble-crypto/src/: aes.rs  keystore.rs  lib.rs
crates/pebble-mail/: Cargo.toml
crates/pebble-mail/src/: backoff.rs  gmail_sync.rs  idle.rs  imap.rs  lib.rs  outlook_sync.rs  parser.rs  realtime_policy.rs  reconcile.rs  smtp.rs  sync.rs  thread.rs
crates/pebble-mail/src/provider/: gmail.rs  imap_provider.rs  mod.rs  outlook.rs
crates/pebble-oauth/: Cargo.toml
crates/pebble-oauth/src/: lib.rs  pkce.rs  redirect.rs  tokens.rs
crates/pebble-search/: Cargo.toml
crates/pebble-search/src/: lib.rs  schema.rs
crates/pebble-store/: Cargo.toml
crates/pebble-store/src/: accounts.rs  attachments.rs  auth_data.rs  cloud_sync.rs  contacts.rs  folders.rs  kanban.rs  labels.rs  lib.rs  messages.rs  migrations.rs  pending_ops.rs  rules.rs  search_pending.rs  secure_user_data.rs  snooze.rs  sync_failures.rs  translate_config.rs  trusted_senders.rs
crates/pebble-translate/: Cargo.toml
crates/pebble-translate/src/: deepl.rs  deeplx.rs  generic.rs  lib.rs  llm.rs  types.rs
docs/superpowers/plans/: 2026-05-17-phase1-skeleton.md
frontend/: package-lock.json  package.json
frontend/src/components/: AccountSetup.tsx  AttachmentList.tsx  ShadowDomEmail.tsx  Sidebar.tsx
frontend/src/features/settings/: AccountsTab.tsx  SettingsView.tsx
frontend/src/hooks/: useComposeRecipients.ts
frontend/src/lib/: api.ts  i18n.ts  language.ts
frontend/src/stores/: ui.store.ts
src/: auth.rs  config.rs  credentials.rs  error.rs  main.rs  state.rs  sync.rs  ws.rs
src/routes/: accounts.rs  attachments.rs  auth.rs  compose.rs  folders.rs  health.rs  labels.rs  messages.rs  mod.rs  search.rs  sync.rs  threads.rs  translate.rs
