[package]
name = "pebble-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = []
rusqlite = ["dep:rusqlite"]
