[package]
name = "pebble-crypto"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
pebble-core = { path = "../pebble-core" }
aes-gcm = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
