[package]
name = "pebble-store"
version = "0.1.0"
edition = "2021"

[dependencies]
pebble-core = { path = "../pebble-core", features = ["rusqlite"] }
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
