[package]
name = "pebble-translate"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
pebble-core = { path = "../pebble-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
